[gd_scene load_steps=8 format=3 uid="uid://dqwh8x3y7jvxi"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://b8wd5k7lyqjxk" path="res://character/player.tscn" id="2_player"]
[ext_resource type="Script" path="res://character/camera_controller.gd" id="3_camera"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.1, 0.1, 0.15, 1)
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.3, 0.4, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_1"]
size = Vector2(40, 40)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.15, 0.15, 0.2, 1)

[sub_resource type="SphereMesh" id="SphereMesh_1"]
radius = 0.5
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy_multiplier = 1.0

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 10, 0)
light_energy = 1.5
shadow_enabled = true

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("3_camera")
follow_speed = 5.0
rotation_follow_speed = 3.0
look_ahead_distance = 2.0
transition_duration = 0.5

[node name="TopDownCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 0, 15, 3)
current = true

[node name="SideCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 3, 8)

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_floor")

[node name="Player" parent="." instance=ExtResource("2_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="BeatVisualizer" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 0)
mesh = SubResource("SphereMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 250.0

[node name="TitleLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "BeatBeat - Phase 2: Movement Test"

[node name="BPMLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "BPM: 120"

[node name="PositionLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Position: 0 / Bar: 0"

[node name="StateLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "State: Idle"

[node name="SpeedLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Speed: 0"

[node name="BeatLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "BEAT"

[node name="Instructions" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "WASD - Move
TAB - Switch Camera
SPACE - Start/Stop Beat
P - Pause/Resume"
